[Qt] Fix build with ANGLE on platforms that provide EGL/GLESv2 https://bugs.webkit.org/show_bug.cgi?id=95965

Reviewed by Tor Arne Vestbø.

.:

Add ANGLE as separate static library to the build and dependencies.

* Source/api.pri:
* WebKit.pro:

Source/ThirdParty/ANGLE:

Add build rules to build ANGLE as a static library for the Qt port.

* ANGLE.pri: Added.
* ANGLE.pro: Added.
* DerivedSources.pri: Added.
* Target.pri: Added.

Source/WebCore:

Moved all ANGLE build rules from here to Source/Thirty/ANGLE and
instead depend on the new library with a simple WEBKIT += ANGLE.

* DerivedSources.pri:
* Target.pri:
* platform/graphics/ANGLEWebKitBridge.h: Simplify the include statement
for the internal shader compiler API, aligned with the other platforms.

Source/WebKit:

Depend on ANGLE if necessary, due to the use WebCore types that pull in ANGLE
headers (GraphicsContext3D.h in particular).

* WebKit1.pro:

Source/WebKit2:

Depend on ANGLE if necessary, due to the use WebCore types that pull in ANGLE
headers (GraphicsContext3D.h in particular).

* Target.pri:

Tools:

Add ANGLE as a static library module to the Qt WebKit build system.

* qmake/mkspecs/features/default_post.prf:
* qmake/mkspecs/modules/angle.prf: Added.

Canonical link: https://commits.webkit.org/113826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127724 268f45cc-cd09-0410-ab3c-d52691b4dbfc