Source/WebCore/platform/graphics/ANGLEWebKitBridge.h
@@ -29,9 +29,7 @@
 #include "PlatformString.h"
 #include <wtf/text/CString.h>
 
-#if PLATFORM(QT)
-#include "ANGLE/include/GLSLANG/ShaderLang.h"
-#elif !PLATFORM(GTK) && !PLATFORM(EFL) && !PLATFORM(BLACKBERRY) && !PLATFORM(CHROMIUM)
+#if !PLATFORM(GTK) && !PLATFORM(EFL) && !PLATFORM(BLACKBERRY) && !PLATFORM(CHROMIUM) && !PLATFORM(QT)
 #include "ANGLE/ShaderLang.h"
 #else
 #include "ShaderLang.h"
