Source/WebKit2/Target.pri
@@ -889,6 +889,8 @@ contains(DEFINES, ENABLE_TOUCH_EVENTS=1) {
 
 contains(DEFINES, ENABLE_GEOLOCATION=1): QT += location
 
+contains(DEFINES, WTF_USE_3D_GRAPHICS=1): WEBKIT += ANGLE
+
 plugin_backend_xlib {
     DEFINES += XP_UNIX
     PKGCONFIG += x11
